# weather-streamer

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: deploy_base.yml  deploy_production.yml  deploy_staging.yml  file_linters.yml
infrastructure/: pub-sub-topic.yml
src/publisher/: README.md
src/publisher/dummy_data/: main.py
src/publisher/sky_pi_iot_weather_gatherer/: main.py
src/publisher/sky_pi_iot_weather_gatherer/lib/: base64.py  si7021.py  struct.py
src/publisher/sky_pi_iot_weather_gatherer/lib/micropython_base64-3.3.3.post4.dist-info/: METADATA  RECORD
src/publisher/sky_pi_iot_weather_gatherer/lib/micropython_binascii-2.4.0.post5.dist-info/: METADATA  RECORD
src/publisher/sky_pi_iot_weather_gatherer/lib/micropython_struct-0.1.1.dist-info/: METADATA  RECORD
src/streamer/: README.md  main.py
terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup
